[package]
name = "dent_cloud"
description = "API for dent instruments' dentcloud.io"
version = "0.1.1"
edition = "2024"
categories = [ "api-bindings", "web-programming" ]
license = "MIT"
keywords = [ "api", "dentinstruments", "dentcloud", "dent", "instruments" ]
repository = "https://github.com/Redhawk18/dent_cloud"
rust-version = "1.85" # Because of 2024 edition

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
governor = "0.10"
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.48.0", features = ["macros"] }
